--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxview.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxview.html
@@ -126,7 +126,7 @@
                                     {% else %}
                                     <img class="ui huge image" src="/static/img/noimage.gif">
                                     {% endif %}
-                                    <div class="ui labeled icon button basic {% if movie.isViewSoon() %}green{% else %}grey{% endif %}" id="viewSoonButton_{{ movie.getId().get() }}" onclick="updateViewSoon('{{ movie.getId().get() }}')">
+                                    <div style="margin-top: 15px" class="ui labeled icon button basic {% if movie.isViewSoon() %}green{% else %}grey{% endif %}" id="viewSoonButton_{{ movie.getId().get() }}" onclick="updateViewSoon('{{ movie.getId().get() }}')">
                                         <i class="{% if movie.isViewSoon() %}check{% else %}remove{% endif %} icon" id="viewSoonButtonIcon_{{ movie.getId().get() }}"></i>demn&auml;chst anschauen
                                     </div>
                                 </div>
@@ -164,7 +164,7 @@
                                 <div class="ui segment">
                                     <h5 class="ui horizontal divider header">Film Infos</h5>
                                     <div class="ui two statistics mini stackable">
-                                        <div class="statistic orange">
+                                        <div class="statistic">
                                             <div class="label">
                                                 Laufzeit
                                             </div>
@@ -172,28 +172,12 @@
                                                 {{ movie.getDuration() | minuteformat }}
                                             </div>
                                         </div>
-                                        <div class="statistic orange">
+                                        <div class="statistic">
                                             <div class="label">
                                                 Genre
                                             </div>
                                             <div class="value">
                                                 {{ genreEditor.getById(movie.getGenreId()).get().getName() | escape }}
-                                            </div>
-                                        </div>
-                                        <div class="statistic orange">
-                                            <div class="label">
-                                                Medium
-                                            </div>
-                                            <div class="value">
-                                                {{ discEditor.getById(movie.getDiscId()).get().getName() | escape }}
-                                            </div>
-                                        </div>
-                                        <div class="statistic orange">
-                                            <div class="label">
-                                                Jahr
-                                            </div>
-                                            <div class="value">
-                                                {{ movie.getYear() }}
                                             </div>
                                         </div>
                                     </div>
@@ -220,6 +204,27 @@
                                     {% endif %}
                                 </div>
                                 {% endif %}
+                                <div class="ui segment">
+                                    <h4 class="ui horizontal divider header">Zusatz Infos</h4>
+                                    <div class="ui two statistics mini stackable">
+                                        <div class="statistic">
+                                            <div class="label">
+                                                Medium
+                                            </div>
+                                            <div class="value">
+                                                {{ discEditor.getById(movie.getDiscId()).get().getName() | escape }}
+                                            </div>
+                                        </div>
+                                        <div class="statistic">
+                                            <div class="label">
+                                                Jahr
+                                            </div>
+                                            <div class="value">
+                                                {{ movie.getYear() }}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
