--- a/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
@@ -6,7 +6,7 @@
     {% include '/webserver/template/header.html' %}
 </head>
 <body>
-{% include '/webserver/template/movie/user/headline.html' with {module: 'movie'} %}
+{% include '/webserver/template/movie/user/headline.html' with {module: 'moviebox'} %}
 <script type="text/javascript">
 
    {% if addElement == false %}
